--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 .git
 
 .obsidian/plugins/*/*.json
+
+.DS_Store
+.gitignore
+node_modules
+public
+prof
+tsconfig.tsbuildinfo
+.obsidian
+.quartz-cache
+private/
+.replit
+replit.nix
